# zero2prod

./: Cargo.toml  configuration.yaml  general.yml
migrations/: 20241021153133_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
