[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Gideon Bature <infoaboutgideon@gmail.com>"]
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If specified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets. This is a TOML array.
# We can only have one library in a project, but we can have multiple binaries.
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.210", features = ["derive"] }
sqlx-cli = "0.8.2"

[build-dependencies]
syn = "1"

[dev-dependencies]
reqwest = "0.12.8"

[dependencies.sqlx]
version = "0.5.7"
default-features = true
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
